# VectorVault

./: CMakeLists.txt  README.md
include/vectorvault/: vectorvault.h  vectorvault.hpp
src/core/: config.cpp  config.h  database.cpp  database.h  error.cpp  error.h  platform.h  types.h
src/index/: distance.cpp  distance.h  distance_avx2.cpp  distance_neon.cpp  distance_sse.cpp  flat.cpp  flat.h  hnsw.cpp  hnsw.h  hnsw_io.cpp  hnsw_io.h  vector_index.h  visited_list.h
src/meta/: btree.cpp  btree.h  filter.cpp  filter.h
src/query/: executor.cpp  executor.h
src/storage/: buffer_pool.cpp  buffer_pool.h  file_io.cpp  file_io.h  free_list.cpp  free_list.h  page_manager.cpp  page_manager.h
tests/: CMakeLists.txt  test_btree.cpp  test_buffer_pool.cpp  test_distance.cpp  test_file_io.cpp  test_flat.cpp  test_free_list.cpp  test_hnsw.cpp  test_hnsw_io.cpp  test_page_manager.cpp  test_sanity.cpp
tools/: vv_cli.cpp
